# ace-rs

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_RATIONALE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs  ticket.md
.github/workflows/: ci.yml
examples/: fp4_compress.rs  fp8_quant_error.rs  fp8_stochastic_rounding.rs  int8_gemv.rs  int8_image_filter.rs  mx_matmul.rs
src/: bsr.rs  cvt_fp8_fp4.rs  cvt_fp8_fp6.rs  cvt_fp8_ph.rs  cvt_fp8_ps.rs  cvt_ph_fp8.rs  cvt_ps_fp8.rs  cvt_ps_ph.rs  cvt_ssdb.rs  detect.rs  fp4.rs  fp6.rs  fp8.rs  lib.rs  native.rs  tcvtrow.rs  tile.rs  tile_move.rs  top.rs  unpackb.rs  vnni.rs
src/native/: ace_tile.c  avx10_v1_aux.c  avx10_v2_aux.c
tests/: encoding.rs
