[package]
name = "ace-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.96"
description = "x86 AI Compute Extensions (ACE) primitives for Rust. See DESIGN_RATIONALE.md."
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "ace"

[dependencies]

[build-dependencies]
cc = { version = "1", optional = true }

[features]
# Opt-in native backend (design decision D7): compile the AVX10_V1_AUX and AVX10_V2_AUX C
# shims with `-mavx10.2` so the primitives can run on real EVEX instructions (under Intel
# SDE) and be differentially compared to the scalar oracle. (The AVX10_V2_AUX TU is
# currently probe-documentation only — its intrinsics are absent from GCC/Clang headers,
# OQ-5.) OFF by default: the default build stays pure stable Rust with no build-script
# effect and no compiled C — "compiles on stable Rust everywhere, correct on non-x86".
native = ["dep:cc"]

[dev-dependencies]
quickcheck = "1"
